--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -6,9 +6,8 @@ import HeaderLink from "./HeaderLink.astro";
   <nav>
     <HeaderLink href="/">Home</HeaderLink>
     <HeaderLink href="/blog">Blog</HeaderLink>
-    <HeaderLink href="https://twitter.com/brightonMboya" target="_blank"
-      >Twitter</HeaderLink
-    >
+    <HeaderLink href="/references" target="_blank">References</HeaderLink>
+    <HeaderLink href="https://twitter.com/brightonMboya">Twitter</HeaderLink>
     <HeaderLink href="https://github.com/BrightonMboya/olp" target=" _blank"
       >GitHub</HeaderLink
     >
